# schemer

./: Makefile  README.md  scheme  schemer.cabal  test_file.txt
lib/Schemer/: .Evaluator.hs.swp  Evaluator.hs  IOPrimitives.hs  Parser.hs  Primitives.hs  Repl.hs  Runner.hs  String.hs  Types.hs  Variables.hs
scheme/: library.ss
src/: Main.hs  Parser.hs
src/Error/: LispError.hs
src/Evaluator/: Evaluator.hs  Primitives.hs
src/Types/: LispVal.hs
