name:                schemer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/clevinson/schemer#readme
license:             BSD3
author:              Cory Levinson
maintainer:          cjlevinson@gmail.com
copyright:           2016 Cory Levinson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable schemer
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , parsec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clevinson/schemer
