name:                schemer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/clevinson/schemer#readme
license:             BSD3
author:              Cory Levinson
maintainer:          cjlevinson@gmail.com
copyright:           2016 Cory Levinson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:     lib
  default-language:   Haskell2010
  ghc-options:       -Wall -Werror -fno-warn-unused-do-bind -fwarn-tabs -fno-warn-name-shadowing
  exposed-modules:    Schemer.Types
                    , Schemer.Evaluator
                    , Schemer.Primitives
                    , Schemer.Parser
                    , Schemer.String
                    , Schemer.Repl
  build-depends:      base
                    , parsec
                    , haskeline
                    , mtl

executable schemer
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:       -Wall -Werror -fno-warn-unused-do-bind -fwarn-tabs -fno-warn-name-shadowing
  build-depends:       base
                     , schemer
  default-language:    Haskell2010
  other-modules:       

source-repository head
  type:     git
  location: https://github.com/clevinson/schemer
